# obr-forecast

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  test.ipynb  vercel.json
api/: main.py  requirements.txt  vercel.json  vercel.py
api/endpoints/: forecasts.py
api/utils/: __init__.py  cache.py  forecast.py  static.py
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/components/: DecileYearlyChangeChart.tsx  ForecastResults.tsx  ForecastSelector.tsx  GrowthRatesInput.tsx  ImpactChart.tsx
frontend/lib/: api.ts
frontend/pages/: _app.tsx  index.tsx
frontend/styles/: globals.css
