[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "obr-forecast"
version = "0.1.0"
description = "OBR forecast impact estimator using PolicyEngine"
authors = [{name = "Nikhil Woodruff", email = "nikhil.woodruff@policyengine.org"}]
requires-python = "==3.11.*"
dependencies = [
    "fastapi",
    "uvicorn",
    "policyengine-uk",
    "policyengine==0.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "mypy",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true
